# pytorch-symbolic

./: README.md  check.sh  introduction.ipynb  pyproject.toml
.github/workflows/: check-code-quality.yaml  check-with-pytest.yaml  install-from-pypi-run.yaml  install-local-and-run.yaml  run-notebook.yaml
docs/: README.md  advanced_topics.md  quick_start.md
docs/reference/: add_to_graph.md  graph_algorithms.md  model_tools.md  optimize_module_calls.md  symbolic_data.md  symbolic_model.md  useful_layers.md
examples/: resnet.py  vgg.py
pytorch_symbolic/: __init__.py  code_generator.py  config.py  functions_utility.py  graph_algorithms.py  model_tools.py  symbolic_api_2.py  symbolic_data.py  symbolic_model.py  useful_layers.py
tests/: test_batch_size_known.py  test_config.py  test_draw_graph.py  test_dynamic_shapes.py  test_model_tools.py  test_serialization.py  test_torch_compile.py
